@@ -36,7 +36,7 @@ sourceforge (2.5-10+14+) unstable; urgency=low
   * [Christian] Started FTP setup
   * [Christian] Download server added
   * [Christian] File Release FRS support added (closes: #108173)
-  * [Christian] Added CVS nightly tarballs 
+  * [Christian] Added CVS nightly tarballs
   * Fixed errors in LDAP configuration so that the online creation of
     groups and users works.
   * Fixed a thinko in debian/sourceforge/cron.d.
@@ -57,8 +57,13 @@ sourceforge (2.5-10+14+) unstable; urgency=low
   * Added fileforge.pl, a setuid Perl script to move files around securely
     (without needing to grant www-data read/write permission on
     $user/incoming/ directories).  Not using it yet, needs more testing.
+  * Splited update-dns.sh in update-dns.sh and update-cvs.sh
+    and related modification in prerm and postinst, purge is now done
+    for cvs, but i don't use update-inetd that doesn't restore old config.
+    probably cvs maintainer should be contacted to have a friendly sourceforge
+    config, because cvs config break sourceforge cvs config
 
- --
+ -- Christian Bayle <bayle@aist.enst.fr>  Mon, 22 Oct 2001 22:24:46 +0200
 
 sourceforge (2.5-10) unstable; urgency=low
 
